--- a/backend1/package.json
+++ b/backend1/package.json
@@ -1,6 +1,7 @@
 {
   "name": "backend1",
   "version": "1.0.0",
+  
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +16,6 @@
     "typescript": "^5.4.5",
     "ws": "^8.17.0"
   },
+  "devDependencies": {},
   "description": ""
 }
